--- a/src/companyback.html
+++ b/src/companyback.html
@@ -58,7 +58,7 @@
         <div class="form_under pt-58">
           <input type="submit" value="確認送出" class="companyback_submit" required @click.prevent="insertsql">
           <div class="field">
-            <input type="text" id="email" class="c_link"  required autocomplete="off" v-model="LINK" style="background: transparent;"/>
+            <input type="text" id="email" class="c_link"  required autocomplete="off" v-model.trim="LINK" style="background: transparent;"/>
             <label for="email" title="直播網址" data-title="LINK FORM YOUTUBE"></label>
           </div>
         </div>
@@ -71,7 +71,7 @@
           <li class="one">
             <div class="companyback_search">
               <!-- icon -->
-              <input class="companyback_searchinput mt-44" type="search" name="search" placeholder="Search" autocomplete="" v-model="searchword" @keyup="ajax" @input="input" ref="input">
+              <input class="companyback_searchinput mt-44" type="search" name="search" placeholder="Search" autocomplete="" v-model="searchword" @keyup="ajax" >
             </div>
             <section class="companyback_chat1 mt-43">
               <h3>廠商</h3>
