--- a/src/companyback_tech.html
+++ b/src/companyback_tech.html
@@ -42,18 +42,18 @@
                     <!-- icon -->
                     <aside class="companyback_layout"></aside>
                     <ol class="companyback_icon">
-                        <li ><a ><i class="fa-regular fa-pen-to-square"></i></a></li>
+                        <li @click="open(index)"><a ><i class="fa-regular fa-pen-to-square"></i></a></li>
                         <li @click="del(tech.ID, tech.STATUS)"><a><i class="fa-regular fa-trash-can"></i></a></li>
                     </ol>
                     <div class="field pt-45">
                         <h2>技術名稱 :</h2>
-                        <input type="text" :id="['skill_name' + index]" required autocomplete="off" v-model="tech.NAME">
-                        <label :for="['skill_name' + index]" title="技術名稱" data-title="Skill name"></label>
+                        <input type="text" :id="['skill_name' + index]" required autocomplete="off" v-model="tech.NAME" disabled>
+                        <label :for="['skill_name' + index]" title="" data-title="Skill name"></label>
                     </div>
                     <div class="field pt-45">
                         <h2>技術網址 :</h2>
-                        <input type="text" :id="['password_add' + index]" required autocomplete="off" v-model="tech.LINK">
-                        <label :for="['password_add' + index]" title="技術網址" data-title="Skill address"></label>
+                        <input type="text" :id="['password_add' + index]" required autocomplete="off" v-model="tech.LINK" disabled>
+                        <label :for="['password_add' + index]" title="" data-title="Skill address"></label>
                     </div>
                     <a class="companyback_save btn_company_back" @click="update(tech.ID, tech.NAME, tech.LINK)">儲存</a>
                 </form>
