feat更新中文版日曆

--- a/src/companyback.html
+++ b/src/companyback.html
@@ -311,6 +311,7 @@
       border-color: #57FFF5;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/zh.js"></script>
 </body>
 
 </html>
